<resources>
    <string name="app_name">Lazyload</string>
    <string name="title_recommend">推荐</string>
    <string name="title_find">发现</string>
    <string name="title_roaming">漫游</string>
    <string name="title_dynamic">动态</string>
    <string name="title_my">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Loading...</string>
</resources>