<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/sel_menu_icon"
        android:title="@string/title_recommend" />
    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/sel_menu_icon"
        android:title="@string/title_find" />
    <item
        android:id="@+id/navigation_roaming"
        android:icon="@drawable/sel_menu_icon"
        android:title="@string/title_roaming" />
    <item
        android:id="@+id/navigation_dynamic"
        android:icon="@drawable/sel_menu_icon"
        android:title="@string/title_dynamic" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/sel_menu_icon"
        android:title="@string/title_my" />
</menu>